fix(form) Slight styling improvements to get rid of horizontal scroll bar in forms with sub schemas

--- a/src/client/less/forms-angular-bs-common.less
+++ b/src/client/less/forms-angular-bs-common.less
@@ -99,6 +99,7 @@ form {
     margin: 0;
     position: relative;
     li {
+      width: available;
       display: block;
       margin: 2px 0;
       padding-top: 3px;
