--- a/src/client/less/forms-angular-bs3-specific.less
+++ b/src/client/less/forms-angular-bs3-specific.less
@@ -88,11 +88,12 @@ form {
   }
 
   ol.sub-doc li {
-    border: 1px solid darken(@well-bg, 7%);
-    border-radius: @border-radius-base;
+    border-bottom: 1px solid darken(@well-bg, 7%);
   }
 
   .schema-head, .schema-foot {
+    border-top: 1px solid darken(@well-bg, 7%);
+    border-bottom: 1px solid darken(@well-bg, 7%);
     padding-left: 23px;
   }
 
